# GFDRR

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  PROJECT.md  PROJECT_STATE.md  SPEC.md  SPEC_reference.md  pyproject.toml
.claude/: settings.local.json
.claude/notes/: architecture_deepening_plan.md
.github/workflows/: ci.yaml  deploy-docs.yaml
.omc/: project-memory.json
.omc/plans/: historical-replay-pipeline.md  open-questions.md  rebalancer-pdp-task.md
.omc/sessions/: 0e86014a-c8a7-4ddd-af39-28b01efa4f54.json  27476a27-1ba6-4759-ac31-1d10012684a8.json  2a551d76-2420-4243-ba19-e91ad3252b94.json  4c367926-a39e-4883-861b-cb373c8a7bc2.json  50bc0c9c-3ea4-48a8-9437-e0c889191adc.json  6570e6d7-decb-4cdf-86e4-edde0f399b2c.json  70a6d5e9-4bdc-40d2-81ac-89e01261a1a3.json  8b6602d3-80f0-455d-a5fc-ca6d021899e1.json  b558d7ae-751a-456e-a75f-887d23474866.json  bf8903ef-b700-456e-be2d-a83fc509e784.json  c23f8b02-bbe5-405c-8ec7-61a5a17a707a.json  c80ec56b-0efe-4af8-97c1-815fd5cd3f2d.json  e1b46815-7732-4882-8394-a73384dc3a2e.json  e497a503-ce21-480f-9256-9ee57709fc3b.json  ef8eda86-6013-424e-9120-bd172a2b2038.json
.omc/specs/: deep-interview-historical-replay.md  deep-interview-rebalancer.md
.omc/state/: agent-replay-0d0da2c9-f4bb-4fec-9388-52a5aa862d99.jsonl  agent-replay-0e86014a-c8a7-4ddd-af39-28b01efa4f54.jsonl  agent-replay-6ffcf085-f808-4492-b927-eb45d2704967.jsonl  autopilot-state.json  deep-interview-state.json  last-tool-error.json  mission-state.json  ralplan-state.json  subagent-tracking.json
docs/: ARCHITECTURE_MAP.md  ATTRIBUTE_SYSTEM_DESIGN.md  CLEANUP_PARAMETRIC_FIELDS.md  DATA_JOURNEY.md  REFACTORING_SPEC.md  architecture_deepening.md  architecture_diagrams.md  build_docs.sh  cleanup_plan.md  conf.py  graph_data_model.md  index.md  repo_struct.md  temp_plan.md
docs/_static/: custom.css
docs/deprecated/: graph_data_model.md
docs/design/: attribute_system.md  environment_design.md  graph_data_model.md  refactoring.md
docs/design_documents/: environment.md
docs/diagrams/: 01_core_entities.mermaid  02_facility_roles.mermaid  03_network_example.mermaid  04_multi_commodity_flow.mermaid  06_edge_model.mermaid  07_attribute_system.mermaid  08_build_pipeline.mermaid  11_hierarchy_aggregation.mermaid  12_io_loaders.mermaid  13_environment_engine.mermaid
docs/modules/: io.rst  loaders.rst  loading.rst
docs/philosophy/: уровни_понимания_кода.md  уровни_понимания_кода_диаграммы.md
docs/scenarios/: algorithm_bike_simulation_historical.md
docs/story_telling/: 01_graph_data_model.md  02_attribute_system.md  03_environment.md
doctrees/: DATA_JOURNEY.doctree  architecture_diagrams.doctree  ideas.doctree  index.doctree  temp_plan.doctree
doctrees/design/: attribute_system.doctree  environment_design.doctree  graph_data_model.doctree  observations_design.doctree  refactoring.doctree
doctrees/modules/: build.doctree  core.doctree  io.doctree  loaders.doctree  loading.doctree  rebalancer.doctree
doctrees/story_telling/: 01_graph_data_model.doctree  02_attribute_system.doctree  03_environment.doctree
gbp/: __init__.py
gbp/consumers/: __init__.py
gbp/core/: __init__.py  columns.py  enums.py  factory.py  model.py  roles.py
gbp/graph/: __init__.py  builders.py  core.py  example.py  io.py  queries.py  validators.py
gbp/io/: __init__.py  dict_io.py  parquet.py
gbp/loaders/: __init__.py  contracts.py  csv_loader.py  dataloader_graph.py  dataloader_mock.py  dataloader_mock_minimal.py  protocols.py  validators.py
gbp/loading/: __init__.py  base.py  csv_loader.py
gbp/rebalancer/: __init__.py  contracts.py  data_loader.py  demand.py  (+5 more)
html/: .buildinfo  DATA_JOURNEY.html  architecture_diagrams.html  genindex.html  ideas.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  temp_plan.html
notebooks/: 00_EDA.ipynb  01_test_graph_api.ipynb  01_test_mock_loader.ipynb  02_test_graph_loader.ipynb  02_test_pipeline.ipynb  03_test_rebalancer.ipynb  04_graph_model_playground.ipynb  05_pipeline_walkthrough.ipynb  canonical_scenario.ipynb  mvp_flat.ipynb  workbook.ipynb  workbook_mock.ipynb
tests/: conftest.py  test_build_pipeline.py  test_canonical_scenario.py  test_dispatch_lifecycle.py  test_graph_loader.py  test_graph_model.py  test_rebalancer.py
(+177 files in other folders)
