[project]
name = "gbp"
version = "0.1.0"
description = "Generalized Framework for Graph-Based Problems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pandera>=0.18.0",
    "structlog>=23.1.0",
    "pyarrow>=12.0.0",

    # Math Engine (used by rebalancer prototype)
    "ortools>=9.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2025.12.19",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinxcontrib-mermaid>=1.0.0",
]
viz = [
    "gradio>=5.0.0",
    "plotly>=6.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "streamlit>=1.25.0",
]
db = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.28.0",
    "alembic>=1.11.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
]
storage = [
    "boto3>=1.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
ignore = ["D100", "D104"]  # Missing docstring in public module/package
per-file-ignores = {"tests/**" = ["D101", "D102", "D103"]}

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default norecursedirs includes "build", which skips tests/unit/build; override explicitly.
norecursedirs = [".git", ".tox", "dist", "venv", ".venv", "__pycache__", "*.egg", ".eggs", "node_modules"]
addopts = "-v --cov=gbp --cov-report=term-missing"
